--- a/calculator.html
+++ b/calculator.html
@@ -94,6 +94,17 @@
         )
     }
 
+    function Card({ children, className, ...props }) {
+        return (
+            <div className={`
+            bg-(--background) shadow-(--shadow) rounded-2xl
+            ${className ? className : ""}    
+            `}>
+                {children}
+            </div>
+        )
+    }
+
     function App() {
         return (
             <main className="px-4 py-28">
