--- a/calculator.html
+++ b/calculator.html
@@ -157,6 +157,10 @@
     }
 
     function Calculator() {
+        function handleInputClick(input) {
+            console.log(input)
+        }
+
         return (
             <Card className={`
                 flex flex-col gap-[1.625rem] w-[22.25rem] pt-14 px-8 pb-8
@@ -172,6 +176,7 @@
                                     key={button.input}
                                     className={button.className || "w-16 h-16"}
                                     variant={button.variant}
+                                    onClick={() => handleInputClick(button.input)}
                                 >
                                     {button.input}
                                 </Button>
