--- a/calculator.html
+++ b/calculator.html
@@ -169,7 +169,7 @@
 
             if(input === "CE") {
                 setResult("")
-                setOperation(operation.slice(0, -2))
+                setOperation(operation.slice(0, -1))
                 return
             }
 
@@ -181,7 +181,7 @@
             }
 
             if(result) {
-                setOperation(isNaN(input) ? `${result}${input === "," ? "" : " "}${input}` : input)
+                setOperation(isNaN(input) ? `${result}${input}` : input)
                 setResult("")
                 return
             }
@@ -191,7 +191,7 @@
                 return
             }
 
-            setOperation(`${operation}${operation.endsWith(",") ? "" : " "}${input}`)
+            setOperation(`${operation}${input}`)
         }
 
         return (
