--- a/calculator.html
+++ b/calculator.html
@@ -136,6 +136,21 @@
         ]
     ]
 
+    const CalculatorContext = React.createContext()
+    function CalculatorProvider({ children }) {
+        const [history, setHistory] = React.useState([])
+
+        function updateHistory(operation, parsedResult) {
+            setHistory((prev) => [...prev, `${operation} = ${parsedResult}`])
+        }
+
+        return (
+            <CalculatorContext.Provider value={{ history, updateHistory }}>
+                {children}
+            </CalculatorContext.Provider>
+        )
+    }
+
     function CalculatorDisplay({ operation, result }) {
         return (
             <div className="flex flex-col gap-2 px-[1.375rem] cursor-default select-none">
@@ -159,6 +174,7 @@
     function Calculator() {
         const [operation, setOperation] = React.useState("")
         const [result, setResult] = React.useState("")
+        const { updateHistory } = React.useContext(CalculatorContext)
 
         function handleInputClick(input) {
             if(input === "C") {
@@ -177,6 +193,8 @@
                 const operationResult = eval(operation.replace(/,/g, "."))
                 const parsedResult = operationResult.toString().replace(/\./g, ",")
                 setResult(parsedResult)
+
+                updateHistory(operation, parsedResult)
                 return
             }
 
@@ -222,6 +240,8 @@
     }
 
     function OperationHistory() {
+        const { history } = React.useContext(CalculatorContext)
+
         return (
             <Card className="w-full max-w-[700px] py-10 px-8">
                 <Text 
@@ -232,11 +252,13 @@
                     Histórico de Operações
                 </Text>
 
-                <ul className="flex flex-col gap-3">
-                    <Text as="li">1 + 1 = 2</Text>
-                    <Text as="li">2 + 3 + 1 = 6</Text>
-                    <Text as="li">2 + 3 = 5</Text>
-                </ul>
+                {history.length > 0 ?
+                (<ul className="flex flex-col gap-3">
+                    {history.map((value, index) => <Text key={`item-${index}`} as="li">{value}</Text>)}
+                </ul>)
+                : (
+                    <Text as="p" variant="muted">Nenhuma operação recente.</Text>
+                )}
             </Card>
         )
     }
@@ -244,8 +266,10 @@
     function App() {
         return (
             <main className="px-4 py-28 sm:px-10 flex justify-center flex-col sm:flex-row items-center sm:items-stretch gap-2">
-                <Calculator />
-                <OperationHistory />
+                <CalculatorProvider>
+                    <Calculator />
+                    <OperationHistory />
+                </CalculatorProvider>
             </main>
         )
     }
