--- a/calculator.html
+++ b/calculator.html
@@ -139,9 +139,22 @@
     const CalculatorContext = React.createContext()
     function CalculatorProvider({ children }) {
         const [history, setHistory] = React.useState([])
+        const historyStorageKey = "history"
 
         function updateHistory(operation, parsedResult) {
-            setHistory((prev) => [...prev, `${operation} = ${parsedResult}`])
+            setHistory((prev) => {
+                const updatedHistory = [
+                    ...prev, 
+                    `${operation} = ${parsedResult}`
+                ]
+
+                localStorage.setItem(
+                    historyStorageKey, 
+                    JSON.stringify(updatedHistory)
+                )
+
+                return updatedHistory
+            })
         }
 
         return (
